src/App.css
:root {
  --bg-color: hsl(180, 52%, 96%);
  --card-color: #fff;
  --header-color: hsl(180, 29%, 50%);
}

body {
  background: var(--bg-color);
}

h3 {
  font-family: "Poppins", sans-serif;
}

b {
  color: var(--header-color);
  display: block;
  margin-top: 1rem;
}

h3:hover {
  color: var(--header-color);
  cursor: pointer;
}

header {
  background: url(/public/images/bg-header-desktop.svg) var(--header-color);
  height: 156px;
}

section {
  width: 80%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-top: 2rem;
}

.card {
  display: flex;
  justify-content: space-between;
  background: var(--card-color);
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
  border-radius: 5px;
}

.filter-bar {
  margin-top: -4rem;
  height: 80px;
  background: var(--card-color);
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 0 2rem;
  border-radius: 5px;
}

.card__wrap {
  display: flex;
  align-items: center;
  gap: 2rem;
  padding-left: 2rem;
}

.card__wrap:hover {
  border-left: 4px solid var(--header-color);
}

.wrap__left ul {
  display: flex;
  list-style: none;
  gap: 0.5rem;
  padding: 0;
}

.card__right {
  display: flex;
  list-style: none;
  gap: 1rem;
  align-items: center;
  padding-left: 0;
  padding-right: 2rem;
}

button {
  height: 40px;
  border: none;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
  background-color: var(--bg-color);
  color: var(--header-color);
  cursor: pointer;
  transition: all 0.3s ease-in;
  border-radius: 5%;
}

button:hover {
  background-color: var(--header-color);
  color: #fff;
}

.black {
  background-color: var(--header-color);
  color: #fff;
}

.black:hover {
  background-color: black;
}

/* Site footer */

footer a {
  text-decoration: none;
}
.footer__wrap {
  display: flex;
  border-top: 1px solid gray;
  padding: 1rem 0 1rem;
  justify-content: space-around;
  align-items: center;
  margin-top: 2rem;
}

.img__wrap {
  height: 2rem;
}

.footer__img:hover {
  opacity: 0.7;
  cursor: pointer;
}

footer img {
  height: 100%;
  border-radius: 2px;
  transition: all 0.5s ease;
}

.footer__logo {
  text-align: center;
}

